@@ -23,8 +23,12 @@ Features added
   nav-item-0, 1, 2...).
 * New option `sphinx-quickstart --use-make-mode` for generating Makefile that
   use sphinx-build make-mode.
-* #1235: i18n: 'literal-block' node can be translated if 'literal-block'
-  is set to `gettext_additional_targets`.
+* #1235: i18n: several node can be translated if it is set to
+  `gettext_additional_targets` in conf.py. Supported nodes are:
+
+  - 'literal-block'
+  - 'doctest-block'
+  - 'raw'
 
 Bugs fixed
 ----------
